# shared-secrets

./: +  .dockerignore  Cargo.toml  README.md
.github/workflows/: build-docker.yml  build-k8s-deploy.yml  build-rust.yml  build.yml  common-pipeline.yml
client/: Cargo.toml
client/config/: default.toml
client/src/: main.rs
client/src/conf/: settings.rs
server/: Cargo.toml  Makefile.toml
server/config/: default.toml
server/operations/config/: .env.local  server-1.toml  server-2.toml  server-3.toml
server/operations/docker/: Dockerfile  docker-compose.yaml
server/operations/kubernetes/base/: ingress.yaml  kustomization.yaml  server-config.yaml  server-follow-1-service.yaml  server-follow-1.yaml  server-follow-2-service.yaml  server-follow-2.yaml  server-leader-service.yaml  server-leader.yaml  server-toml.yaml
server/operations/kubernetes/overlays/dev/: backend-config.yaml  ingress.yaml  kustomization.yaml  server-follow-1-service.yaml  server-follow-2-service.yaml  server-leader-service.yaml
server/operations/kubernetes/overlays/prod/: kustomization.yaml
server/src/: lib.rs  main.rs
server/src/conf/: settings.rs
server/src/consensus/: handler.rs  messages.rs  mod.rs  raft.rs
server/src/domain/: error.rs  model.rs
server/src/polynomial/: galois.rs
server/src/refresher/: secret.rs
server/src/routes/: auth.rs  context.rs  http.rs  mod.rs
server/src/secret/: secret.rs
server/tests/: integration_test.rs
server/tests/config/: .env.test  server-1.toml  server-2.toml  server-3.toml
server/tests/docker/: docker-compose.yaml
sss-wrap/: Cargo.toml
sss-wrap/src/: lib.rs
sss-wrap/src/polynomial/: galois.rs
sss-wrap/src/secret/: secret.rs
