[package]
name = "shared-secret-client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
tokio = { version = "1.33.0", features = ["rt", "macros", "rt-multi-thread"] }
sss-wrap = { path = "../sss-wrap" }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
config = "0.13.3"
