[package]
name = "shared-secret-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.4.0"
async-trait = "0.1.74"
bincode = "1.3.3"
galois_2p8 = "0.1.2"
lazy_static = "1.4.0"
log = "0.4.20"
rand = "0.8.5"
riteraft = "0.1.0"
serde = { version = "1.0.190", features = ["derive"] }
slog = "2.7.0"
slog-async = "2.8.0"
slog-stdlog = "4.1.1"
slog-term = "2.9.0"
sss-rs = "0.12.0"
structopt = "0.3.26"
tokio = { version = "1.33.0", features = ["full"] }

