[package]
name = "shared-secret-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.4.0"
async-trait = "0.1.74"
bincode = "1.3.3"
log = "0.4.20"
riteraft = "0.1.0"
serde = { version = "1.0.190", features = ["derive"] }
slog = "2.7.0"
slog-async = "2.8.0"
slog-stdlog = "4.1.1"
slog-term = "2.9.0"
sss-rs = "0.12.0"
tokio = { version = "1.33.0", features = ["full"] }
sss-wrap = { path = "../sss-wrap" }
thiserror = "1.0.50"
actix-web-httpauth = "0.8.1"
slog-scope = "4.4.0"
config = "0.13.3"
